<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BgChanger</string>
    <string name="action_settings">Settings</string>
    <string name="seconds_label">Seconds:</string>
	<string name="color_code_label">Color Code (RGB):</string>    
    <string name="submit_button">Submit</string>
    <string name="reset_button">Reset</string>    
    <string name="seconds_default_text">2</string>    
    <string name="color_code_default_text">0,255,199</string>    

</resources>
